[gd_scene load_steps=11 format=3 uid="uid://blcglpbttoi64"]

[ext_resource type="Script" path="res://scripts/unit.gd" id="2_3agr1"]
[ext_resource type="Texture2D" uid="uid://b83swchiycb7v" path="res://assets/classic/tiles/logo.png" id="3_qpxab"]
[ext_resource type="Texture2D" uid="uid://bojbrs2dpggcv" path="res://assets/selection.png" id="3_uy385"]

[sub_resource type="Gradient" id="Gradient_ulv2o"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u25hc"]
gradient = SubResource("Gradient_ulv2o")

[sub_resource type="Gradient" id="Gradient_4hdu4"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7qgak"]
gradient = SubResource("Gradient_4hdu4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0ldvb"]
direction = Vector3(0, 0, 1)
spread = 0.0
initial_velocity_min = -20.0
initial_velocity_max = -20.0
gravity = Vector3(0, 0, 0)

[sub_resource type="QuadMesh" id="QuadMesh_okfd7"]
size = Vector2(0.2, 0.2)
center_offset = Vector3(0, 0.5, 0)
orientation = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_qs727"]
size = Vector3(0.5, 0.1, 0.5)

[node name="Unit" type="CharacterBody3D" groups=["rts_selectable"]]
script = ExtResource("2_3agr1")

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0.3, -0.3)
layers = 2
axis = 1
render_priority = 1
texture = ExtResource("3_qpxab")

[node name="SelectionIndicator" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.353553, 0.353553, 0, -0.353553, 0.353553, 0, 0.3, -0.3)
visible = false
texture = ExtResource("3_uy385")

[node name="HPBar" type="Node3D" parent="."]
transform = Transform3D(0.333, 0, 0, 0, 5, 0, 0, 0, 1, 0, 0.3, -0.7)
visible = false

[node name="HPBarBack" type="Sprite3D" parent="HPBar"]
render_priority = 8
texture = SubResource("GradientTexture1D_u25hc")
region_enabled = true
region_rect = Rect2(2, 0, 0, 0)

[node name="HPBarFill" type="Sprite3D" parent="HPBar"]
render_priority = 5
texture = SubResource("GradientTexture1D_7qgak")

[node name="NavigationAgent" type="NavigationAgent3D" parent="."]
radius = 0.55

[node name="ShotParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_0ldvb")
draw_pass_1 = SubResource("QuadMesh_okfd7")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
shape = SubResource("BoxShape3D_qs727")
